added page vendors file

--- a/src/artikel.html
+++ b/src/artikel.html
@@ -6,12 +6,9 @@
     <title>Artikel</title>
   </head>
   <body>
-    <link rel="stylesheet" href="/src/style/style.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <!-- link bootstrap css -->
-    <link
-      rel="stylesheet"
-      href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="vendors/style/bootstrap.min.css" />
 
     <!-- slick css -->
     <link
@@ -28,7 +25,7 @@
     <nav class="navbar navbar-expand-lg shadow-sm">
       <div class="container-fluid px-25">
         <a class="navbar-brand me-5" href="#">
-          <img src="/src/assets/logo.png" alt="" />
+          <img src="assets/logo.png" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -122,7 +119,7 @@
             <div class="card py-3 px-2 mt-4">
               <div class="d-flex align-self-center align-items-center gap-3">
                 <div class="">
-                  <img src="/src/assets/artikel1.png" alt="" />
+                  <img src="assets/artikel1.png" alt="" />
                 </div>
 
                 <div class="artikelCardText">
@@ -142,7 +139,7 @@
             <div class="card py-3 px-2 mt-4">
               <div class="d-flex align-self-center align-items-center gap-3">
                 <div class="">
-                  <img src="/src/assets/artikel2.png" alt="" />
+                  <img src="assets/artikel2.png" alt="" />
                 </div>
 
                 <div class="artikelCardText">
@@ -163,7 +160,7 @@
             <div class="card py-3 px-2 mt-4">
               <div class="d-flex align-self-center align-items-center gap-3">
                 <div class="">
-                  <img src="/src/assets/artikel3.png" alt="" />
+                  <img src="assets/artikel3.png" alt="" />
                 </div>
 
                 <div class="artikelCardText">
@@ -183,7 +180,7 @@
             <div class="card py-3 px-2 mt-4">
               <div class="d-flex align-self-center align-items-center gap-3">
                 <div class="">
-                  <img src="/src/assets/artikel4.png" alt="" />
+                  <img src="assets/artikel4.png" alt="" />
                 </div>
 
                 <div class="artikelCardText">
@@ -203,7 +200,7 @@
             <div class="card py-3 px-2 mt-4">
               <div class="d-flex align-self-center align-items-center gap-3">
                 <div class="">
-                  <img src="/src/assets/artikel1.png" alt="" />
+                  <img src="assets/artikel1.png" alt="" />
                 </div>
 
                 <div class="artikelCardText">
@@ -253,8 +250,8 @@
     <footer class="px-25 py-3 mt-5">
       <div>
         <div class="d-flex gap-4">
-          <img src="/src/assets/logoKemendagri.png" alt="" />
-          <img src="/src/assets/logoSimple.png" alt="" />
+          <img src="assets/logoKemendagri.png" alt="" />
+          <img src="assets/logoSimple.png" alt="" />
         </div>
         <div class="justify-content-between d-flex mt-4">
           <div>
@@ -269,34 +266,34 @@
           </div>
 
           <div class="d-flex gap-4">
-            <a href="#"> <img src="/src/assets/facebook.svg" alt="" /></a>
-            <a href="#"> <img src="/src/assets/twitter.svg" alt="" /></a>
-            <a href="#"> <img src="/src/assets/Instagram.svg" alt="" /></a>
+            <a href="#"> <img src="assets/facebook.svg" alt="" /></a>
+            <a href="#"> <img src="assets/twitter.svg" alt="" /></a>
+            <a href="#"> <img src="assets/Instagram.svg" alt="" /></a>
           </div>
         </div>
       </div>
       <div class="justify-content-between d-flex mt-5">
         <div class="d-flex gap-4">
           <div class="d-flex gap-2">
-            <img src="/src/assets/phone.svg" alt="" />
+            <img src="assets/phone.svg" alt="" />
             <p>Telepon: (021)</p>
           </div>
           <div class="d-flex gap-2">
-            <img src="/src/assets/mail.svg" alt="" />
+            <img src="assets/mail.svg" alt="" />
             <p>Layanan Kontak Kami</p>
           </div>
         </div>
         <div class="d-flex gap-4">
           <div class="d-flex gap-2">
-            <img src="/src/assets/database.svg" alt="" />
+            <img src="assets/database.svg" alt="" />
             <p>Data & Informasi</p>
           </div>
           <div class="d-flex gap-2">
-            <img src="/src/assets/faq.svg" alt="" />
+            <img src="assets/faq.svg" alt="" />
             <p>FAQ</p>
           </div>
           <div class="d-flex gap-2">
-            <img src="/src/assets/callcenter.svg" alt="" />
+            <img src="assets/callcenter.svg" alt="" />
             <p>Help Center (HERO)</p>
           </div>
         </div>
@@ -321,8 +318,8 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <!-- link bootstrap js -->
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <script src="/src/index.js"></script>
+    <script src="vendors/js/bootstrap.min.js"></script>
+    <script src="vendors/js/bootstrap.bundle.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
