--- a/src/artikelDetail.html
+++ b/src/artikelDetail.html
@@ -6,12 +6,9 @@
     <title>Artikel</title>
   </head>
   <body>
-    <link rel="stylesheet" href="/src/style/style.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <!-- link bootstrap css -->
-    <link
-      rel="stylesheet"
-      href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="vendors/style/bootstrap.min.css" />
 
     <!-- slick css -->
     <link
@@ -28,7 +25,7 @@
     <nav class="navbar navbar-expand-lg shadow-sm">
       <div class="container-fluid px-25">
         <a class="navbar-brand me-5" href="#">
-          <img src="/src/assets/logo.png" alt="" />
+          <img src="assets/logo.png" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -119,7 +116,7 @@
           </ol>
         </nav>
         <div class="container text-center mt-5">
-          <img src="/src/assets/artikelHero.png" alt="" />
+          <img src="assets/artikelHero.png" alt="" />
         </div>
       </div>
       <!-- end hero -->
@@ -182,7 +179,7 @@
               class="d-flex gap-2 align-self-center justify-content-end align-items-center text-decoration-none"
               href="#"
             >
-              Bagikan <span><img src="/src/assets/share.svg" alt="" /></span>
+              Bagikan <span><img src="assets/share.svg" alt="" /></span>
             </a>
           </div>
         </div>
@@ -199,7 +196,7 @@
             <a href="#" class="text-decoration-none">
               <div class="card py-1 text-black">
                 <img
-                  src="/src/assets/artikel1.png"
+                  src="assets/artikel1.png"
                   class="card-img-top p-3"
                   alt="..."
                 />
@@ -213,7 +210,7 @@
                     tumbuh sebesar 12,3% (yoy)
                   </p>
                   <div class="linkHover text-end justify-content-end mt-3">
-                    <img src="/src/assets/link.png" alt="" />
+                    <img src="assets/link.png" alt="" />
                   </div>
                 </div>
               </div>
@@ -223,7 +220,7 @@
             <a href="#" class="text-decoration-none">
               <div class="card py-1 text-black">
                 <img
-                  src="/src/assets/artikel2.png"
+                  src="assets/artikel2.png"
                   class="card-img-top p-3"
                   alt="..."
                 />
@@ -237,7 +234,7 @@
                     tumbuh sebesar 12,3% (yoy)
                   </p>
                   <div class="linkHover text-end justify-content-end mt-3">
-                    <img src="/src/assets/link.png" alt="" />
+                    <img src="assets/link.png" alt="" />
                   </div>
                 </div>
               </div>
@@ -247,7 +244,7 @@
             <a href="#" class="text-decoration-none">
               <div class="card py-1 text-black">
                 <img
-                  src="/src/assets/artikel3.png"
+                  src="assets/artikel3.png"
                   class="card-img-top p-3"
                   alt="..."
                 />
@@ -261,7 +258,7 @@
                     tumbuh sebesar 12,3% (yoy)
                   </p>
                   <div class="linkHover text-end justify-content-end mt-3">
-                    <img src="/src/assets/link.png" alt="" />
+                    <img src="assets/link.png" alt="" />
                   </div>
                 </div>
               </div>
@@ -276,8 +273,8 @@
     <footer class="px-25 py-3 mt-5">
       <div>
         <div class="d-flex gap-4">
-          <img src="/src/assets/logoKemendagri.png" alt="" />
-          <img src="/src/assets/logoSimple.png" alt="" />
+          <img src="assets/logoKemendagri.png" alt="" />
+          <img src="assets/logoSimple.png" alt="" />
         </div>
         <div class="justify-content-between d-flex mt-4">
           <div>
@@ -292,34 +289,34 @@
           </div>
 
           <div class="d-flex gap-4">
-            <a href="#"> <img src="/src/assets/facebook.svg" alt="" /></a>
-            <a href="#"> <img src="/src/assets/twitter.svg" alt="" /></a>
-            <a href="#"> <img src="/src/assets/Instagram.svg" alt="" /></a>
+            <a href="#"> <img src="assets/facebook.svg" alt="" /></a>
+            <a href="#"> <img src="assets/twitter.svg" alt="" /></a>
+            <a href="#"> <img src="assets/Instagram.svg" alt="" /></a>
           </div>
         </div>
       </div>
       <div class="justify-content-between d-flex mt-5">
         <div class="d-flex gap-4">
           <div class="d-flex gap-2">
-            <img src="/src/assets/phone.svg" alt="" />
+            <img src="assets/phone.svg" alt="" />
             <p>Telepon: (021)</p>
           </div>
           <div class="d-flex gap-2">
-            <img src="/src/assets/mail.svg" alt="" />
+            <img src="assets/mail.svg" alt="" />
             <p>Layanan Kontak Kami</p>
           </div>
         </div>
         <div class="d-flex gap-4">
           <div class="d-flex gap-2">
-            <img src="/src/assets/database.svg" alt="" />
+            <img src="assets/database.svg" alt="" />
             <p>Data & Informasi</p>
           </div>
           <div class="d-flex gap-2">
-            <img src="/src/assets/faq.svg" alt="" />
+            <img src="assets/faq.svg" alt="" />
             <p>FAQ</p>
           </div>
           <div class="d-flex gap-2">
-            <img src="/src/assets/callcenter.svg" alt="" />
+            <img src="assets/callcenter.svg" alt="" />
             <p>Help Center (HERO)</p>
           </div>
         </div>
@@ -344,8 +341,8 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <!-- link bootstrap js -->
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <script src="/src/index.js"></script>
+    <script src="vendors/js/bootstrap.min.js"></script>
+    <script src="vendors/js/bootstrap.bundle.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
