--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,9 @@
     <title>Home</title>
   </head>
   <body>
-    <link rel="stylesheet" href="/src/style/style.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <!-- link bootstrap css -->
-    <link
-      rel="stylesheet"
-      href="/node_modules/bootstrap/dist/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="vendors/style/bootstrap.min.css" />
 
     <!-- slick css -->
     <link
@@ -28,7 +25,7 @@
     <nav class="navbar navbar-expand-lg shadow-sm">
       <div class="container-fluid px-25">
         <a class="navbar-brand me-5" href="#">
-          <img src="/src/assets/logo.png" alt="" />
+          <img src="assets/logo.png" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -147,7 +144,7 @@
                     </div>
                   </div>
                 </div>
-                <img src="/src/assets/komoditas1.png" alt="" />
+                <img src="assets/komoditas1.png" alt="" />
               </div>
               <div class="komoditasTitle position-relative">
                 <div class="position-absolute bottom-0 pb-4">
@@ -163,7 +160,7 @@
                     </div>
                   </div>
                 </div>
-                <img src="/src/assets/komoditas2.png" alt="" />
+                <img src="assets/komoditas2.png" alt="" />
               </div>
               <div class="komoditasTitle position-relative">
                 <div class="position-absolute bottom-0 pb-4">
@@ -179,7 +176,7 @@
                     </div>
                   </div>
                 </div>
-                <img src="/src/assets/komoditas3.png" alt="" />
+                <img src="assets/komoditas3.png" alt="" />
               </div>
               <div class="komoditasTitle position-relative">
                 <div class="position-absolute bottom-0 pb-4">
@@ -195,7 +192,7 @@
                     </div>
                   </div>
                 </div>
-                <img src="/src/assets/komoditas2.png" alt="" />
+                <img src="assets/komoditas2.png" alt="" />
               </div>
               <div class="komoditasTitle position-relative">
                 <div class="position-absolute bottom-0 pb-4">
@@ -210,7 +207,7 @@
                     </div>
                   </div>
                 </div>
-                <img src="/src/assets/komoditas2.png" alt="" />
+                <img src="assets/komoditas2.png" alt="" />
               </div>
             </div>
           </div>
@@ -229,7 +226,7 @@
             <a href="artikelDetail.html" class="text-decoration-none">
               <div class="card py-1">
                 <img
-                  src="/src/assets/artikel1.png"
+                  src="assets/artikel1.png"
                   class="card-img-top p-3"
                   alt="..."
                 />
@@ -243,7 +240,7 @@
                     tumbuh sebesar 12,3% (yoy)
                   </p>
                   <div class="linkHover text-end justify-content-end mt-3">
-                    <img src="/src/assets/link.png" alt="" />
+                    <img src="assets/link.png" alt="" />
                   </div>
                 </div>
               </div>
@@ -253,7 +250,7 @@
             <a href="#" class="text-decoration-none">
               <div class="card py-1">
                 <img
-                  src="/src/assets/artikel7.png"
+                  src="assets/artikel7.png"
                   class="card-img-top p-3"
                   alt="..."
                 />
@@ -267,7 +264,7 @@
                     tumbuh sebesar 12,3% (yoy)
                   </p>
                   <div class="linkHover text-end justify-content-end mt-3">
-                    <img src="/src/assets/link.png" alt="" />
+                    <img src="assets/link.png" alt="" />
                   </div>
                 </div>
               </div>
@@ -277,7 +274,7 @@
             <a href="#" class="text-decoration-none">
               <div class="card py-1" style="width: 18rem">
                 <img
-                  src="/src/assets/artikel3.png"
+                  src="assets/artikel3.png"
                   class="card-img-top p-3"
                   alt="..."
                 />
@@ -291,7 +288,7 @@
                     tumbuh sebesar 12,3% (yoy)
                   </p>
                   <div class="linkHover text-end justify-content-end mt-3">
-                    <img src="/src/assets/link.png" alt="" />
+                    <img src="assets/link.png" alt="" />
                   </div>
                 </div>
               </div>
@@ -303,7 +300,7 @@
             <a href="#" class="text-decoration-none">
               <div class="card py-1 text-black">
                 <img
-                  src="/src/assets/artikel4.png"
+                  src="assets/artikel4.png"
                   class="card-img-top p-3"
                   alt="..."
                 />
@@ -317,7 +314,7 @@
                     tumbuh sebesar 12,3% (yoy)
                   </p>
                   <div class="linkHover text-end justify-content-end mt-3">
-                    <img src="/src/assets/link.png" alt="" />
+                    <img src="assets/link.png" alt="" />
                   </div>
                 </div>
               </div>
@@ -327,7 +324,7 @@
             <a href="#" class="text-decoration-none">
               <div class="card py-1 text-black">
                 <img
-                  src="/src/assets/artikel5.png"
+                  src="assets/artikel5.png"
                   class="card-img-top p-3"
                   alt="..."
                 />
@@ -341,7 +338,7 @@
                     tumbuh sebesar 12,3% (yoy)
                   </p>
                   <div class="linkHover text-end justify-content-end mt-3">
-                    <img src="/src/assets/link.png" alt="" />
+                    <img src="assets/link.png" alt="" />
                   </div>
                 </div>
               </div>
@@ -351,7 +348,7 @@
             <a href="#" class="text-decoration-none">
               <div class="card py-1 text-black">
                 <img
-                  src="/src/assets/artikel6.png"
+                  src="assets/artikel6.png"
                   class="card-img-top p-3"
                   alt="..."
                 />
@@ -365,7 +362,7 @@
                     tumbuh sebesar 12,3% (yoy)
                   </p>
                   <div class="linkHover text-end justify-content-end mt-3">
-                    <img src="/src/assets/link.png" alt="" />
+                    <img src="assets/link.png" alt="" />
                   </div>
                 </div>
               </div>
@@ -434,25 +431,25 @@
               <tr>
                 <th scope="row">EKSPOR</th>
                 <td>
-                  20.53 <span><img src="/src/assets/IconUp.png" alt="" /></span>
+                  20.53 <span><img src="assets/IconUp.png" alt="" /></span>
                 </td>
                 <td>
-                  -8.34 <span><img src="/src/assets/IconUp.png" alt="" /></span>
+                  -8.34 <span><img src="assets/IconUp.png" alt="" /></span>
                 </td>
                 <td>
                   @20.53
-                  <span><img src="/src/assets/IconDown.png" alt="" /></span>
+                  <span><img src="assets/IconDown.png" alt="" /></span>
                 </td>
                 <td>
                   -8.34
-                  <span><img src="/src/assets/IconDown.png" alt="" /></span>
+                  <span><img src="assets/IconDown.png" alt="" /></span>
                 </td>
               </tr>
               <tr>
                 <th scope="row" class="ps-4">Udang</th>
                 <td>20.53</td>
                 <td>
-                  -8.34 <span><img src="/src/assets/IconUp.png" alt="" /></span>
+                  -8.34 <span><img src="assets/IconUp.png" alt="" /></span>
                 </td>
                 <td>@20.53</td>
                 <td>-8.34</td>
@@ -460,29 +457,29 @@
               <tr>
                 <th scope="row" class="ps-4">Tuna</th>
                 <td>
-                  20.53 <span><img src="/src/assets/IconUp.png" alt="" /></span>
+                  20.53 <span><img src="assets/IconUp.png" alt="" /></span>
                 </td>
                 <td>-8.34</td>
                 <td>
                   @20.53
-                  <span><img src="/src/assets/IconDown.png" alt="" /></span>
+                  <span><img src="assets/IconDown.png" alt="" /></span>
                 </td>
                 <td>
-                  -8.34 <span><img src="/src/assets/IconUp.png" alt="" /></span>
+                  -8.34 <span><img src="assets/IconUp.png" alt="" /></span>
                 </td>
               </tr>
               <tr>
                 <th scope="row" class="ps-4">Nila</th>
                 <td>
                   20.53
-                  <span><img src="/src/assets/IconDown.png" alt="" /></span>
+                  <span><img src="assets/IconDown.png" alt="" /></span>
                 </td>
                 <td>
-                  -8.34 <span><img src="/src/assets/IconUp.png" alt="" /></span>
+                  -8.34 <span><img src="assets/IconUp.png" alt="" /></span>
                 </td>
                 <td>
                   @20.53
-                  <span><img src="/src/assets/IconDown.png" alt="" /></span>
+                  <span><img src="assets/IconDown.png" alt="" /></span>
                 </td>
                 <td>-8.34</td>
               </tr>
@@ -514,7 +511,7 @@
               <div
                 class="position-absolute end-0 top-0 mt-3 me-3 ebookTranslate"
               >
-                <img src="/src/assets/read.png" alt="" />
+                <img src="assets/read.png" alt="" />
               </div>
               <div class="position-absolute bottom-0 pb-3">
                 <p class="fw-bold">Januari 2024</p>
@@ -527,7 +524,7 @@
               <div
                 class="position-absolute end-0 top-0 mt-3 me-3 ebookTranslate"
               >
-                <img src="/src/assets/read.png" alt="" />
+                <img src="assets/read.png" alt="" />
               </div>
               <div class="position-absolute bottom-0 pb-3">
                 <p class="fw-bold">Febuari 2024</p>
@@ -540,7 +537,7 @@
               <div
                 class="position-absolute end-0 top-0 mt-3 me-3 ebookTranslate"
               >
-                <img src="/src/assets/read.png" alt="" />
+                <img src="assets/read.png" alt="" />
               </div>
               <div class="position-absolute bottom-0 pb-3">
                 <p class="fw-bold">Maret 2024</p>
@@ -553,7 +550,7 @@
               <div
                 class="position-absolute end-0 top-0 mt-3 me-3 ebookTranslate"
               >
-                <img src="/src/assets/read.png" alt="" />
+                <img src="assets/read.png" alt="" />
               </div>
               <div class="position-absolute bottom-0 pb-3">
                 <p class="fw-bold">April 2024</p>
@@ -568,7 +565,7 @@
               <div
                 class="position-absolute end-0 top-0 mt-3 me-3 ebookTranslate"
               >
-                <img src="/src/assets/read.png" alt="" />
+                <img src="assets/read.png" alt="" />
               </div>
               <div class="position-absolute bottom-0 pb-3">
                 <p class="fw-bold">Mei 2024</p>
@@ -581,7 +578,7 @@
               <div
                 class="position-absolute end-0 top-0 mt-3 me-3 ebookTranslate"
               >
-                <img src="/src/assets/read.png" alt="" />
+                <img src="assets/read.png" alt="" />
               </div>
               <div class="position-absolute bottom-0 pb-3">
                 <p class="fw-bold">Juni 2024</p>
@@ -594,7 +591,7 @@
               <div
                 class="position-absolute end-0 top-0 mt-3 me-3 ebookTranslate"
               >
-                <img src="/src/assets/read.png" alt="" />
+                <img src="assets/read.png" alt="" />
               </div>
               <div class="position-absolute bottom-0 pb-3">
                 <p class="fw-bold">Juli 2024</p>
@@ -607,7 +604,7 @@
               <div
                 class="position-absolute end-0 top-0 mt-3 me-3 ebookTranslate"
               >
-                <img src="/src/assets/read.png" alt="" />
+                <img src="assets/read.png" alt="" />
               </div>
               <div class="position-absolute bottom-0 pb-3">
                 <p class="fw-bold">Agustus 2024</p>
@@ -630,8 +627,8 @@
     <footer class="px-25 py-3 mt-5">
       <div>
         <div class="d-flex gap-4">
-          <img src="/src/assets/logoKemendagri.png" alt="" />
-          <img src="/src/assets/logoSimple.png" alt="" />
+          <img src="assets/logoKemendagri.png" alt="" />
+          <img src="assets/logoSimple.png" alt="" />
         </div>
         <div class="justify-content-between d-flex mt-4">
           <div>
@@ -646,34 +643,34 @@
           </div>
 
           <div class="d-flex gap-4">
-            <img src="/src/assets/facebook.svg" alt="" />
-            <img src="/src/assets/twitter.svg" alt="" />
-            <img src="/src/assets/Instagram.svg" alt="" />
+            <img src="assets/facebook.svg" alt="" />
+            <img src="assets/twitter.svg" alt="" />
+            <img src="assets/Instagram.svg" alt="" />
           </div>
         </div>
       </div>
       <div class="justify-content-between d-flex mt-5">
         <div class="d-flex gap-4">
           <div class="d-flex gap-2">
-            <img src="/src/assets/phone.svg" alt="" />
+            <img src="assets/phone.svg" alt="" />
             <p>Telepon: (021)</p>
           </div>
           <div class="d-flex gap-2">
-            <img src="/src/assets/mail.svg" alt="" />
+            <img src="assets/mail.svg" alt="" />
             <p>Layanan Kontak Kami</p>
           </div>
         </div>
         <div class="d-flex gap-4">
           <div class="d-flex gap-2">
-            <img src="/src/assets/database.svg" alt="" />
+            <img src="assets/database.svg" alt="" />
             <p>Data & Informasi</p>
           </div>
           <div class="d-flex gap-2">
-            <img src="/src/assets/faq.svg" alt="" />
+            <img src="assets/faq.svg" alt="" />
             <p>FAQ</p>
           </div>
           <div class="d-flex gap-2">
-            <img src="/src/assets/callcenter.svg" alt="" />
+            <img src="assets/callcenter.svg" alt="" />
             <p>Help Center (HERO)</p>
           </div>
         </div>
@@ -699,8 +696,8 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <!-- link bootstrap js -->
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <script src="/src/index.js"></script>
+    <script src="vendors/js/bootstrap.min.js"></script>
+    <script src="vendors/js/bootstrap.bundle.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
