styling card, image to %

--- a/src/artikel.html
+++ b/src/artikel.html
@@ -115,10 +115,10 @@
         </nav>
         <!-- card artikel -->
         <section class="cardArtikel">
-          <a href="#" class="text-decoration-none text-black">
+          <a href="artikelDetail.html" class="text-decoration-none text-black">
             <div class="card py-3 px-2 mt-4">
-              <div class="d-flex align-self-center align-items-center gap-3">
-                <div class="">
+              <div class="d-flex gap-3 align-items-center">
+                <div class="ms-3">
                   <img src="assets/artikel1.png" alt="" />
                 </div>
 
@@ -128,8 +128,8 @@
                   </h5>
                   <p>
                     Ekspor Indonesia terus melanjutkan kinerja positif. Di bulan
-                    Oktober 2022, ekspor tercatat sebesar US$24,81 miliar <br />
-                    atau tumbuh sebesar 12,3% (yoy).
+                    Oktober 2022, ekspor tercatat sebesar US$24,81 miliar atau
+                    tumbuh sebesar 12,3% (yoy).
                   </p>
                 </div>
               </div>
@@ -137,7 +137,7 @@
           </a>
           <a href="#" class="text-decoration-none text-black">
             <div class="card py-3 px-2 mt-4">
-              <div class="d-flex align-self-center align-items-center gap-3">
+              <div class="d-flex align-items-center gap-3">
                 <div class="">
                   <img src="assets/artikel2.png" alt="" />
                 </div>
@@ -158,7 +158,7 @@
           >
           <a href="#" class="text-decoration-none text-black">
             <div class="card py-3 px-2 mt-4">
-              <div class="d-flex align-self-center align-items-center gap-3">
+              <div class="d-flex align-items-center gap-3">
                 <div class="">
                   <img src="assets/artikel3.png" alt="" />
                 </div>
@@ -178,7 +178,7 @@
           >
           <a href="#" class="text-decoration-none text-black">
             <div class="card py-3 px-2 mt-4">
-              <div class="d-flex align-self-center align-items-center gap-3">
+              <div class="d-flex align-items-center gap-3">
                 <div class="">
                   <img src="assets/artikel4.png" alt="" />
                 </div>
@@ -198,7 +198,7 @@
           >
           <a href="#" class="text-decoration-none text-black">
             <div class="card py-3 px-2 mt-4">
-              <div class="d-flex align-self-center align-items-center gap-3">
+              <div class="d-flex align-items-center gap-3">
                 <div class="">
                   <img src="assets/artikel1.png" alt="" />
                 </div>
