--- a/src/artikelDetail.html
+++ b/src/artikelDetail.html
@@ -106,7 +106,7 @@
 
     <main class="heroArtikel">
       <!-- hero -->
-      <div class="px-25 mt-3">
+      <div class="px-25 mt-3 container-fluid">
         <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item text-decoration-none">
@@ -115,8 +115,8 @@
             <li class="breadcrumb-item active" aria-current="page">Artikel</li>
           </ol>
         </nav>
-        <div class="container text-center mt-5">
-          <img src="assets/artikelHero.png" alt="" />
+        <div class="text-center mt-5">
+          <img src="assets/artikelHero.png" width="80%" alt="" />
         </div>
       </div>
       <!-- end hero -->
@@ -188,7 +188,7 @@
     </main>
 
     <!-- artikel carousel -->
-    <section class="artikelArtikel">
+    <section class="artikelArtikel container-fluid">
       <div class="px-25 artikel">
         <h3 class="mb-3">Artikel Terkait</h3>
         <div class="row">
