--- a/src/index.html
+++ b/src/index.html
@@ -123,9 +123,9 @@
     <!-- end hero -->
 
     <!-- komoditas -->
-    <section class="komoditas" id="komoditas">
+    <section class="komoditas container-fluid" - id="komoditas">
       <div class="px-25">
-        <h5>Komoditas</h5>
+        <h5 class="mb-3 ms-2">Komoditas</h5>
         <div class="row">
           <div class="col">
             <!-- Markup untuk carousel -->
@@ -217,10 +217,12 @@
     <!-- end komoditas -->
 
     <!-- artikel -->
-    <section class="artikel mt-5" id="artikel">
+    <section class="artikel mt-5 container-fluid" id="artikel">
       <div class="px-25">
-        <h5>Artikel</h5>
-        <p>Artikel Terkait Ekspor di Indonesia</p>
+        <div class="ms-2 mb-3">
+          <h5>Artikel</h5>
+          <p>Artikel Terkait Ekspor di Indonesia</p>
+        </div>
         <div class="row">
           <div class="col-4">
             <a href="artikelDetail.html" class="text-decoration-none">
@@ -272,7 +274,7 @@
           </div>
           <div class="col-4">
             <a href="#" class="text-decoration-none">
-              <div class="card py-1" style="width: 18rem">
+              <div class="card py-1">
                 <img
                   src="assets/artikel3.png"
                   class="card-img-top p-3"
@@ -380,7 +382,7 @@
     <!-- end artikel -->
 
     <!-- tabel informasi -->
-    <section class="data" id="statistik">
+    <section class="data container-fluid" id="statistik">
       <div class="px-25">
         <h5>Data & Informasi</h5>
         <p>Grafik dan Tabel Data Nilai Ekspor Terkini</p>
@@ -501,7 +503,7 @@
     <!-- end tabel informasi -->
 
     <!-- e-book -->
-    <section class="ebook mt-5" id="ebook">
+    <section class="ebook mt-5 container-fluid" id="ebook">
       <div class="px-25">
         <h5>E-BOOK</h5>
         <p>E-Book Data Ekspor Terbaru</p>
@@ -624,7 +626,7 @@
     <!-- end e-book -->
 
     <!-- footer -->
-    <footer class="px-25 py-3 mt-5">
+    <footer class="px-25 py-3 mt-5 container-fluid">
       <div>
         <div class="d-flex gap-4">
           <img src="assets/logoKemendagri.png" alt="" />
