hover ebook style3

--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
 
     <!-- hero -->
     <section>
-      <div class="hero">
+      <div class="hero mb-5">
         <div class="container">
           <h1 class="fw-bold text-black mb-4 hero-text">
             Discover How We Can <br />
