change text footer and color button primary

--- a/src/index.html
+++ b/src/index.html
@@ -678,7 +678,7 @@
         </div>
       </div>
       <div class="text-center mt-5">
-        © Hak Cipta 2024 <span class="fw-bold">Smart Market Analysis</span>
+        © Hak Cipta 2024 <span class="fw-bold">Market Intelligence</span>
       </div>
     </footer>
     <!-- end footer -->
