--- a/src/artikel.html
+++ b/src/artikel.html
@@ -67,7 +67,7 @@
                     >
                       Komoditas
                     </a>
-                    <ul class="dropdown-menu dropdown-menu-dark">
+                    <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="#">Action</a></li>
                       <li>
                         <a class="dropdown-item" href="#">Another action</a>
@@ -247,11 +247,11 @@
     </main>
 
     <!-- footer -->
-    <footer class="px-25 py-3 mt-5">
+    <footer class="px-25 py-3 mt-5 container-fluid">
       <div>
-        <div class="d-flex gap-4">
-          <img src="assets/logoKemendagri.png" alt="" />
-          <img src="assets/logoSimple.png" alt="" />
+        <div class="d-flex gap-4 align-items-center">
+          <img src="assets/logoKemendagri.png" class="img-fluid" alt="" />
+          <img src="assets/logoSimple.png" alt="" class="mb-2" />
         </div>
         <div class="justify-content-between d-flex mt-4">
           <div>
@@ -266,9 +266,9 @@
           </div>
 
           <div class="d-flex gap-4">
-            <a href="#"> <img src="assets/facebook.svg" alt="" /></a>
-            <a href="#"> <img src="assets/twitter.svg" alt="" /></a>
-            <a href="#"> <img src="assets/Instagram.svg" alt="" /></a>
+            <img src="assets/facebook.svg" alt="" />
+            <img src="assets/twitter.svg" alt="" />
+            <img src="assets/Instagram.svg" alt="" />
           </div>
         </div>
       </div>
