--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
                     >
                       Komoditas
                     </a>
-                    <ul class="dropdown-menu dropdown-menu-dark">
+                    <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="#">Action</a></li>
                       <li>
                         <a class="dropdown-item" href="#">Another action</a>
@@ -628,9 +628,9 @@
     <!-- footer -->
     <footer class="px-25 py-3 mt-5 container-fluid">
       <div>
-        <div class="d-flex gap-4">
-          <img src="assets/logoKemendagri.png" alt="" />
-          <img src="assets/logoSimple.png" alt="" />
+        <div class="d-flex gap-4 align-items-center">
+          <img src="assets/logoKemendagri.png" class="img-fluid" alt="" />
+          <img src="assets/logoSimple.png" alt="" class="mb-2" />
         </div>
         <div class="justify-content-between d-flex mt-4">
           <div>
