--- a/src/artikel.html
+++ b/src/artikel.html
@@ -42,11 +42,9 @@
           class="collapse navbar-collapse justify-content-center"
           id="navbarText"
         >
-          <ul class="navbar-nav mb-2 mb-lg-0 text-center me-5">
+          <ul class="navbar-nav mb-2 mb-lg-0 text-center mt-3 mt-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -58,12 +56,14 @@
               >
                 Komoditas
               </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
+              <ul class="dropdown-menu text-center justify-content-center">
+                <li><a class="dropdown-item" href="#">Udang</a></li>
+                <li><a class="dropdown-item" href="#">Tuna</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="#">Nila</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Kepiting</a>
                 </li>
               </ul>
             </li>
@@ -77,14 +77,14 @@
               <a class="nav-link" href="#ebook">E-Book</a>
             </li>
           </ul>
-          <div class="text-center justify-content-center">
-            <a
-              class="navbar-text text-login ms-5 fw-bold text-decoration-none text-center"
-              href="#"
-            >
-              Login
-            </a>
-          </div>
+        </div>
+        <div class="mt-3 mt-md-0 mx-auto ms-md-0">
+          <a
+            class="navbar-text text-login fw-bold text-decoration-none text-center btn btn-darkblue px-4 w-100"
+            href="#"
+          >
+            Login
+          </a>
         </div>
       </div>
     </nav>
@@ -225,24 +225,30 @@
           <img src="assets/logoKemendagri.png" class="img-fluid" alt="" />
           <img src="assets/logoSimple.png" alt="" class="mb-2" />
         </div>
-        <div class="justify-content-between d-md-flex d-block mt-4">
+        <div
+          class="justify-content-between align-items-center d-md-flex d-block mt-4"
+        >
           <div class="mt-md-0 mt-1">
             <p>
               Lorem ipsum dolor sit amet consectetur. Et lorem aliquam urna
-              faucibus molestie. Eu ipsum aenean sociis consequat fringilla.
-              Adipiscing orci risus lacus felis neque sit. Egestas nulla
-              tristique est consequat risus sit sapien ullamcorper.
+              faucibus <br />
+              molestie. Eu ipsum aenean sociis consequat fringilla. Adipiscing
+              orci risus lacus <br />
+              felis neque sit. Egestas nulla tristique est consequat risus sit
+              sapien ullamcorper.
             </p>
           </div>
 
-          <div class="d-flex gap-4 mt-md-0 mt-5">
-            <img src="assets/facebook.svg" alt="" />
-            <img src="assets/twitter.svg" alt="" />
-            <img src="assets/Instagram.svg" alt="" />
+          <div class="d-flex gap-4 mt-md-0 mt-4 mb-4">
+            <a href="#"> <img src="assets/facebook.svg" alt="" /></a>
+            <a href="#"> <img src="assets/twitter.svg" alt="" /></a>
+            <a href="#"> <img src="assets/Instagram.svg" alt="" /></a>
           </div>
         </div>
       </div>
-      <div class="justify-content-end justify-content-md-between d-block mt-5">
+      <div
+        class="d-md-flex justify-content-md-between d-block mt-5 d-md-block d-none"
+      >
         <div class="d-flex gap-3 gap-md-4">
           <div class="d-flex gap-2">
             <img src="assets/phone.svg" alt="" />
@@ -268,7 +274,30 @@
           </div>
         </div>
       </div>
-      <div class="text-center mt-5">
+      <div class="d-block d-md-none mt-3 mx-auto">
+        <div class="d-flex mt-3 gap-2">
+          <img src="assets/phone.svg" alt="" />
+          <p>Telepon: (021)</p>
+        </div>
+        <div class="d-flex mt-3 gap-2">
+          <img src="assets/mail.svg" alt="" />
+          <p>Layanan Kontak Kami</p>
+        </div>
+        <div class="d-flex mt-3 gap-2">
+          <img src="assets/database.svg" alt="" />
+          <p>Data & Informasi</p>
+        </div>
+        <div class="d-flex mt-3 gap-2 align-items-center">
+          <img src="assets/faq.svg" alt="" />
+          <p>FAQ</p>
+        </div>
+        <div class="d-flex gap-2 mt-3">
+          <img src="assets/callcenter.svg" alt="" />
+          <p>Help Center</p>
+        </div>
+      </div>
+      <div class="text-center mt-5 py-4">
+        <hr class="mb-3" />
         © Hak Cipta 2024 <span class="fw-bold">Market Intelligence</span>
       </div>
     </footer>
