--- a/src/artikelDetail.html
+++ b/src/artikelDetail.html
@@ -42,7 +42,7 @@
           class="collapse navbar-collapse justify-content-center"
           id="navbarText"
         >
-          <ul class="navbar-nav mb-2 mb-lg-0 text-center me-5">
+          <ul class="navbar-nav mb-2 mb-lg-0 text-center mt-3 mt-md-0">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
@@ -56,12 +56,14 @@
               >
                 Komoditas
               </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
+              <ul class="dropdown-menu text-center justify-content-center">
+                <li><a class="dropdown-item" href="#">Udang</a></li>
+                <li><a class="dropdown-item" href="#">Tuna</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                  <a class="dropdown-item" href="#">Nila</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Kepiting</a>
                 </li>
               </ul>
             </li>
@@ -75,14 +77,14 @@
               <a class="nav-link" href="#ebook">E-Book</a>
             </li>
           </ul>
-          <div class="text-center justify-content-center">
-            <a
-              class="navbar-text text-login ms-5 fw-bold text-decoration-none text-center"
-              href="#"
-            >
-              Login
-            </a>
-          </div>
+        </div>
+        <div class="mt-3 mt-md-0 mx-auto ms-md-0">
+          <a
+            class="navbar-text text-login fw-bold text-decoration-none text-center btn btn-darkblue px-4 w-100"
+            href="#"
+          >
+            Login
+          </a>
         </div>
       </div>
     </nav>
@@ -276,7 +278,7 @@
             </p>
           </div>
 
-          <div class="d-flex gap-4 mt-md-0 mt-5">
+          <div class="d-flex gap-4 mt-md-0 mt-4 mb-4">
             <a href="#"> <img src="assets/facebook.svg" alt="" /></a>
             <a href="#"> <img src="assets/twitter.svg" alt="" /></a>
             <a href="#"> <img src="assets/Instagram.svg" alt="" /></a>
@@ -284,7 +286,7 @@
         </div>
       </div>
       <div
-        class="justify-content-end d-md-flex d-block justify-content-md-between d-block mt-5"
+        class="d-md-flex justify-content-md-between d-block mt-5 d-md-block d-none"
       >
         <div class="d-flex gap-3 gap-md-4">
           <div class="d-flex gap-2">
@@ -311,7 +313,30 @@
           </div>
         </div>
       </div>
-      <div class="text-center mt-5">
+      <div class="d-block d-md-none mt-3 mx-auto">
+        <div class="d-flex mt-3 gap-2">
+          <img src="assets/phone.svg" alt="" />
+          <p>Telepon: (021)</p>
+        </div>
+        <div class="d-flex mt-3 gap-2">
+          <img src="assets/mail.svg" alt="" />
+          <p>Layanan Kontak Kami</p>
+        </div>
+        <div class="d-flex mt-3 gap-2">
+          <img src="assets/database.svg" alt="" />
+          <p>Data & Informasi</p>
+        </div>
+        <div class="d-flex mt-3 gap-2 align-items-center">
+          <img src="assets/faq.svg" alt="" />
+          <p>FAQ</p>
+        </div>
+        <div class="d-flex gap-2 mt-3">
+          <img src="assets/callcenter.svg" alt="" />
+          <p>Help Center</p>
+        </div>
+      </div>
+      <div class="text-center mt-5 py-4">
+        <hr class="mb-3" />
         © Hak Cipta 2024 <span class="fw-bold">Market Intelligence</span>
       </div>
     </footer>
