--- a/src/artikelDetail.html
+++ b/src/artikelDetail.html
@@ -24,9 +24,20 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg shadow-sm">
       <div class="container-fluid px-25">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand d-none d-md-block" href="#">
           <img src="assets/logo.png" alt="" />
         </a>
+        <a class="navbar-brand d-block d-md-none" href="#">
+          <img src="assets/logoMobile.png" alt="" />
+        </a>
+        <div class="ms-auto ms-md-0 d-block d-md-none me-2">
+          <a
+            class="text-login fw-bold text-decoration-none text-center btn btn-darkblue px-3"
+            href="#"
+          >
+            Login
+          </a>
+        </div>
         <button
           class="navbar-toggler"
           type="button"
@@ -44,7 +55,7 @@
         >
           <ul class="navbar-nav mb-2 mb-lg-0 text-center mt-3 mt-md-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -68,7 +79,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#artikel">Artikel</a>
+              <a class="nav-link" href="#artikel">Artikel</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#statistik">Statistik</a>
@@ -78,7 +89,7 @@
             </li>
           </ul>
         </div>
-        <div class="mt-3 mt-md-0 mx-auto ms-md-0">
+        <div class="mx-auto ms-md-0 d-none d-md-block">
           <a
             class="navbar-text text-login fw-bold text-decoration-none text-center btn btn-darkblue px-4 w-100"
             href="#"
@@ -260,9 +271,9 @@
     <!-- footer -->
     <footer class="px-25 py-3 mt-5 container-fluid">
       <div>
-        <div class="d-flex gap-4 align-items-center">
+        <div class="d-flex gap-4 align-items-center pt-4">
           <img src="assets/logoKemendagri.png" class="img-fluid" alt="" />
-          <img src="assets/logoSimple.png" alt="" class="mb-2" />
+          <img src="assets/logoSimple.png" alt="" class="mb-2 img-fluid" />
         </div>
         <div
           class="justify-content-between align-items-center d-md-flex d-block mt-4"
