--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,20 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg shadow-sm">
       <div class="container-fluid px-25">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand d-none d-md-block" href="#">
           <img src="assets/logo.png" alt="" />
         </a>
+        <a class="navbar-brand d-block d-md-none" href="#">
+          <img src="assets/logoMobile.png" alt="" />
+        </a>
+        <div class="ms-auto ms-md-0 d-block d-md-none me-2">
+          <a
+            class="text-login fw-bold text-decoration-none text-center btn btn-outline-darkblue px-3"
+            href="#"
+          >
+            Login
+          </a>
+        </div>
         <button
           class="navbar-toggler"
           type="button"
@@ -78,9 +89,9 @@
             </li>
           </ul>
         </div>
-        <div class="mt-3 mt-md-0 mx-auto ms-md-0">
+        <div class="mx-auto ms-md-0 d-none d-md-block">
           <a
-            class="navbar-text text-login fw-bold text-decoration-none text-center btn btn-darkblue px-4 w-100"
+            class="navbar-text text-login fw-bold text-decoration-none text-center btn btn-outline-darkblue px-4 w-100"
             href="#"
           >
             Login
@@ -95,8 +106,9 @@
       <div class="hero mb-5 px-25">
         <div class="container">
           <h1 class="fw-bold text-black mb-4 hero-text">
-            Discover How We Can <br />
-            Elevate Your
+            Discover How We Can <br class="d-none d-md-block" />
+            Elevate <br class="d-block d-md-none" />
+            Your
             <span class="">Exports</span>
           </h1>
           <a href="#komoditas" class="btn btn-lg btn-darkblue"
@@ -664,9 +676,9 @@
     <!-- footer -->
     <footer class="px-25 py-3 mt-5 container-fluid">
       <div>
-        <div class="d-flex gap-4 align-items-center">
+        <div class="d-flex gap-4 align-items-center pt-4">
           <img src="assets/logoKemendagri.png" class="img-fluid" alt="" />
-          <img src="assets/logoSimple.png" alt="" class="mb-2" />
+          <img src="assets/logoSimple.png" alt="" class="mb-2 img-fluid" />
         </div>
         <div
           class="justify-content-between align-items-center d-md-flex d-block mt-4"
