added mobile layout version8

--- a/src/index.html
+++ b/src/index.html
@@ -538,7 +538,7 @@
     <section class="ebook mt-5 container-fluid" id="ebook">
       <div class="px-25">
         <h5>E-BOOK</h5>
-        <p>E-Book Data Ekspor Terbaru</p>
+        <p class="mb-3">E-Book Data Ekspor Terbaru</p>
         <div class="row mt-4 justify-content-between">
           <div class="col-6 col-md-3 bg-ebook position-relative ebookContent">
             <div class="text-white mb-4">
@@ -601,7 +601,7 @@
             </div>
           </div>
         </div>
-        <div class="row mt-4 justify-content-between">
+        <div class="row mt-md-4 justify-content-between">
           <div class="col-6 col-md-3 bg-ebook position-relative ebookContent">
             <div class="text-white mb-4">
               <div
