added mobile layout version9

--- a/src/index.html
+++ b/src/index.html
@@ -539,7 +539,7 @@
       <div class="px-25">
         <h5>E-BOOK</h5>
         <p class="mb-3">E-Book Data Ekspor Terbaru</p>
-        <div class="row mt-4 justify-content-between">
+        <div class="row mt-4 justify-content-md-between d-flex">
           <div class="col-6 col-md-3 bg-ebook position-relative ebookContent">
             <div class="text-white mb-4">
               <div
