--- a/src/artikel.html
+++ b/src/artikel.html
@@ -313,7 +313,10 @@
       </div>
     </footer>
     <!-- end footer -->
-
+    <!-- scrolling -->
+    <button id="scrollToTopBtn" title="Go to top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
     <!-- fontawesome js -->
     <script
       src="https://kit.fontawesome.com/9abdef5e4d.js"
