--- a/src/artikelDetail.html
+++ b/src/artikelDetail.html
@@ -55,7 +55,7 @@
         >
           <ul class="navbar-nav mb-2 mb-lg-0 text-center mt-3 mt-md-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -79,7 +79,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#artikel">Artikel</a>
+              <a class="nav-link active" href="#artikel">Artikel</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#statistik">Statistik</a>
