added mobile layout version13

--- a/src/artikel.html
+++ b/src/artikel.html
@@ -93,7 +93,7 @@
         </div>
         <div class="mx-auto ms-md-0 d-none d-md-block">
           <a
-            class="navbar-text text-login fw-bold text-decoration-none text-center btn btn-darkblue px-4 w-100"
+            class="navbar-text text-login fw-bold text-decoration-none text-center btn btn-outline-darkblue px-4 w-100"
             href="#"
           >
             Login
