--- a/src/artikelDetail.html
+++ b/src/artikelDetail.html
@@ -32,7 +32,7 @@
         </a>
         <div class="ms-auto ms-md-0 d-block d-md-none me-2">
           <a
-            class="text-login fw-bold text-decoration-none text-center btn btn-darkblue px-3"
+            class="text-login fw-bold text-decoration-none text-center btn btn-outline-darkblue px-3"
             href="#"
           >
             Login
@@ -125,6 +125,7 @@
           <h1 class="fw-bold mt-5">
             Ekspor Indonesia Terus Melanjutkan Kinerja Positif
           </h1>
+          <p class="py-4 fw-bold text-primary">16 November 2022</p>
           <p class="text-break">
             Jakarta, 16/11/2022 Kemenkeu – Ekspor Indonesia terus melanjutkan
             kinerja positif. Di bulan Oktober 2022, ekspor tercatat sebesar
