--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
               >
                 Komoditas
               </a>
-              <ul class="dropdown-menu text-center justify-content-center">
+              <ul class="dropdown-menu text-start justify-content-center">
                 <li><a class="dropdown-item" href="#">Udang</a></li>
                 <li><a class="dropdown-item" href="#">Tuna</a></li>
                 <li>
