revamp heroMobile icon display table

--- a/src/index.html
+++ b/src/index.html
@@ -430,91 +430,125 @@
             <tbody>
               <tr class="fw-bold">
                 <th scope="row">EKSPOR</th>
-                <td>5.63</td>
+                <td><div class="tab-td">5.63</div></td>
                 <td class="gap-3 align-items-center d-flex">
-                  9.79 <span><img src="assets/IconDown.png" alt="" /></span>
+                  <div class="tab-td">
+                    9.79 <span><img src="assets/IconDown.png" alt="" /></span>
+                  </div>
                 </td>
-                <td>0.528</td>
+                <td>
+                  <div class="tab-td">0.528</div>
+                </td>
                 <td class="gap-3 align-items-center d-flex">
-                  19.20
-                  <span><img src="assets/IconUp.png" alt="" /></span>
+                  <div class="tab-td">
+                    19.20
+                    <span><img src="assets/IconUp.png" alt="" /></span>
+                  </div>
                 </td>
               </tr>
               <tr>
                 <th scope="row" class="ps-4">Udang</th>
-                <td>1.73</td>
+                <td><div class="tab-td">1.73</div></td>
                 <td class="gap-3 align-items-center d-flex">
-                  -19.82 <span><img src="assets/IconDown.png" alt="" /></span>
+                  <div class="tab-td">
+                    -19.82 <span><img src="assets/IconDown.png" alt="" /></span>
+                  </div>
                 </td>
-                <td>0.131</td>
+                <td><div class="tab-td">0.131</div></td>
                 <td class="gap-3 align-items-center d-flex">
-                  -7.96 <span><img src="assets/IconDown.png" alt="" /></span>
+                  <div class="tab-td">
+                    -7.96 <span><img src="assets/IconDown.png" alt="" /></span>
+                  </div>
                 </td>
               </tr>
               <tr>
                 <th scope="row" class="ps-4">Tuna</th>
-                <td>0.93</td>
+                <td><div class="tab-td">0.93</div></td>
                 <td class="gap-3 align-items-center d-flex">
-                  -3.45<span><img src="assets/IconDown.png" alt="" /></span>
+                  <div class="tab-td">
+                    -3.45<span><img src="assets/IconDown.png" alt="" /></span>
+                  </div>
                 </td>
-                <td>0.081</td>
+                <td><div class="tab-td">0.081</div></td>
                 <td class="gap-3 align-items-center d-flex">
-                  10.31 <span><img src="assets/IconUp.png" alt="" /></span>
+                  <div class="tab-td">
+                    10.31 <span><img src="assets/IconUp.png" alt="" /></span>
+                  </div>
                 </td>
               </tr>
               <tr>
                 <th scope="row" class="ps-4">Cumi</th>
-                <td>0.76</td>
+                <td><div class="tab-td">0.76</div></td>
                 <td class="gap-3 align-items-center d-flex">
-                  3.45<span><img src="assets/IconUp.png" alt="" /></span>
+                  <div class="tab-td">
+                    3.45<span><img src="assets/IconUp.png" alt="" /></span>
+                  </div>
                 </td>
-                <td>0.027</td>
+                <td><div class="tab-td">0.027</div></td>
                 <td class="gap-3 align-items-center d-flex">
-                  -41.62 <span><img src="assets/IconDown.png" alt="" /></span>
+                  <div class="tab-td">
+                    -41.62 <span><img src="assets/IconDown.png" alt="" /></span>
+                  </div>
                 </td>
               </tr>
               <tr>
                 <th scope="row" class="ps-4">Rajungan</th>
-                <td>0.45</td>
+                <td><div class="tab-td">0.45</div></td>
                 <td class="gap-3 align-items-center d-flex">
-                  -7.55<span><img src="assets/IconDown.png" alt="" /></span>
+                  <div class="tab-td">
+                    -7.55<span><img src="assets/IconDown.png" alt="" /></span>
+                  </div>
                 </td>
-                <td>0.107</td>
+                <td><div class="tab-td">0.107</div></td>
                 <td class="gap-3 align-items-center d-flex">
-                  142.63 <span><img src="assets/IconUp.png" alt="" /></span>
+                  <div class="tab-td">
+                    142.63 <span><img src="assets/IconUp.png" alt="" /></span>
+                  </div>
                 </td>
               </tr>
               <tr>
                 <th scope="row" class="ps-4">Rumput Laut</th>
-                <td>0.43</td>
+                <td><div class="tab-td">0.43</div></td>
                 <td class="gap-3 align-items-center d-flex">
-                  -27.76<span><img src="assets/IconDown.png" alt="" /></span>
+                  <div class="tab-td">
+                    -27.76<span><img src="assets/IconDown.png" alt="" /></span>
+                  </div>
                 </td>
-                <td>0.049</td>
+                <td><div class="tab-td">0.049</div></td>
                 <td class="gap-3 align-items-center d-flex">
-                  35.57 <span><img src="assets/IconUp.png" alt="" /></span>
+                  <div class="tab-td">
+                    35.57 <span><img src="assets/IconUp.png" alt="" /></span>
+                  </div>
                 </td>
               </tr>
               <tr>
                 <th scope="row" class="ps-4">Tilapia</th>
-                <td>0.08</td>
+                <td><div class="tab-td">0.08</div></td>
                 <td class="gap-3 align-items-center d-flex">
-                  4.13<span><img src="assets/IconUp.png" alt="" /></span>
+                  <div class="tab-td">
+                    4.13<span><img src="assets/IconUp.png" alt="" /></span>
+                  </div>
                 </td>
-                <td>0.007</td>
+                <td><div class="tab-td">0.007</div></td>
                 <td class="gap-3 align-items-center d-flex">
-                  32.06 <span><img src="assets/IconUp.png" alt="" /></span>
+                  <div class="tab-td">
+                    32.06 <span><img src="assets/IconUp.png" alt="" /></span>
+                  </div>
                 </td>
               </tr>
               <tr>
                 <th scope="row" class="ps-4">Lobster</th>
-                <td>0.02</td>
+                <td><div class="tab-td">0.02</div></td>
                 <td class="gap-3 align-items-center d-flex">
-                  -6.89<span><img src="assets/IconDown.png" alt="" /></span>
+                  <div class="tab-td">
+                    -6.89<span><img src="assets/IconDown.png" alt="" /></span>
+                  </div>
                 </td>
-                <td>0.005</td>
+                <td><div class="tab-td">0.005</div></td>
                 <td class="gap-3 align-items-center d-flex">
-                  148.37 <span><img src="assets/IconUp.png" alt="" /></span>
+                  <div class="tab-td">
+                    148.37 <span><img src="assets/IconUp.png" alt="" /></span>
+                  </div>
                 </td>
               </tr>
             </tbody>
