revamp hero title and navbar: mobile and web

--- a/src/index.html
+++ b/src/index.html
@@ -103,11 +103,12 @@
 
     <!-- hero -->
     <section>
-      <div class="hero mb-5 px-25">
+      <div class="hero mb-5 px-3">
         <div class="container">
           <h1 class="fw-bold text-black mb-4 hero-text">
-            Discover How We Can <br class="d-none d-md-block" />
-            Elevate <br class="d-block d-md-none" />
+            Discover How We Can Elevate <br class="d-block d-md-none" /><br
+              class="d-none d-md-block"
+            />
             Your
             <span class="">Exports</span>
           </h1>
