add 1 section hero and komoditas2

--- a/src/index.html
+++ b/src/index.html
@@ -119,8 +119,8 @@
           ></a>
         </div>
         <!-- komoditas -->
-        <div class="komoditas z-5 mt-5 pt-5" id="komoditas">
-          <div class="container-fluid px-25 mt-3">
+        <div class="komoditas z-5 mt-5 pt-5 d-none d-md-block" id="komoditas">
+          <div class="container-fluid px-25 mt-5">
             <h5 class="mb-3 ms-2">Komoditas</h5>
             <div class="row">
               <div class="col">
@@ -225,7 +225,99 @@
       </div>
     </section>
     <!-- end hero -->
-
+    <!-- komoditas -->
+    <div class="komoditas z-5 mt-5 pt-5 d-block d-md-none" id="komoditas">
+      <div class="container-fluid px-25 mt-5">
+        <h5 class="mb-3 ms-2">Komoditas</h5>
+        <div class="row">
+          <div class="col">
+            <!-- Markup untuk carousel -->
+            <div class="slick-carousel">
+              <div class="komoditasTitle position-relative">
+                <div class="position-absolute bottom-0 pb-4">
+                  <div class="komoditasTranslate mb-3">
+                    <h5 class="mb-3">Nila</h5>
+                    <p class="">
+                      Indonesia sebagai negara kepulauan dengan perairan yang
+                      kaya akan sumber daya alam, memiliki potensi ekspor
+                      udang yang sangat menjanjikan.
+                    </p>
+                    <div class="text-end">
+                      <a href="#" class="btn btn-primary btn-sm">See more</a>
+                    </div>
+                  </div>
+                </div>
+                <img src="assets/komoditas4.png" alt="" />
+              </div>
+              <div class="komoditasTitle position-relative">
+                <div class="position-absolute bottom-0 pb-4">
+                  <div class="komoditasTranslate mb-3">
+                    <h5 class="mb-3">Udang</h5>
+                    <p class="">
+                      Indonesia sebagai negara kepulauan dengan perairan yang
+                      kaya akan sumber daya alam, memiliki potensi ekspor
+                      udang yang sangat menjanjikan.
+                    </p>
+                    <div class="text-end">
+                      <a href="#" class="btn btn-primary btn-sm">See more</a>
+                    </div>
+                  </div>
+                </div>
+                <img src="assets/komoditas5.png" alt="" />
+              </div>
+              <div class="komoditasTitle position-relative">
+                <div class="position-absolute bottom-0 pb-4">
+                  <div class="komoditasTranslate mb-3">
+                    <h5 class="mb-3">Tuna</h5>
+                    <p class="">
+                      Indonesia sebagai negara kepulauan dengan perairan yang
+                      kaya akan sumber daya alam, memiliki potensi ekspor
+                      udang yang sangat menjanjikan.
+                    </p>
+                    <div class="text-end">
+                      <a href="#" class="btn btn-primary btn-sm">See more</a>
+                    </div>
+                  </div>
+                </div>
+                <img src="assets/komoditas6.png" alt="" />
+              </div>
+              <div class="komoditasTitle position-relative">
+                <div class="position-absolute bottom-0 pb-4">
+                  <div class="komoditasTranslate mb-3">
+                    <h5 class="mb-3">Udang</h5>
+                    <p class="">
+                      Indonesia berhasil memasok lebih dari 16% total produksi
+                      dunia dengan rata-rata produksi tuna, cakalang dan tongkol
+                      Indonesia mencapai lebih dari 1,2 juta ton/tahun
+                    </p>
+                    <div class="text-end">
+                      <a href="#" class="btn btn-primary btn-sm">See more</a>
+                    </div>
+                  </div>
+                </div>
+                <img src="assets/komoditas5.png" alt="" />
+              </div>
+              <div class="komoditasTitle position-relative">
+                <div class="position-absolute bottom-0 pb-4">
+                  <div class="komoditasTranslate mb-3">
+                    <h5 class="mb-3">Kepiting</h5>
+                    <p class="">
+                      Indonesia adalah negara terbesar kelima di dunia yang
+                      mengekspor produk Kepiting pasar global.
+                    </p>
+                    <div class="text-end">
+                      <a href="#" class="btn btn-primary btn-sm">See more</a>
+                    </div>
+                  </div>
+                </div>
+                <img src="assets/komoditas7.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- end komoditas -->
     <!-- artikel -->
     <section class="artikel mt-5 container-fluid" id="artikel">
       <div class="px-25">
