add komoditas navbar

--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,15 @@
                 <li>
                   <a class="dropdown-item" href="#">Kepiting</a>
                 </li>
+                <li>
+                  <a class="dropdown-item" href="#">Rumput Laut</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Lobster</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Tilapia</a>
+                </li>
               </ul>
             </li>
             <li class="nav-item">
