remove komoditas nila

--- a/src/index.html
+++ b/src/index.html
@@ -70,9 +70,7 @@
               <ul class="dropdown-menu text-start justify-content-center">
                 <li><a class="dropdown-item" href="#">Udang</a></li>
                 <li><a class="dropdown-item" href="#">Tuna</a></li>
-                <li>
-                  <a class="dropdown-item" href="#">Nila</a>
-                </li>
+
                 <li>
                   <a class="dropdown-item" href="#">Kepiting</a>
                 </li>
@@ -138,7 +136,7 @@
                   <div class="komoditasTitle position-relative">
                     <div class="position-absolute bottom-0 pb-4">
                       <div class="komoditasTranslate mb-3">
-                        <h5 class="mb-3">Nila</h5>
+                        <h5 class="mb-3">Lobster</h5>
                         <p class="">
                           Indonesia sebagai negara kepulauan dengan perairan
                           yang kaya akan sumber daya alam, memiliki
@@ -151,7 +149,7 @@
                         </div>
                       </div>
                     </div>
-                    <img src="assets/komoditas4.png" alt="" />
+                    <img src="assets/lobster.png" alt="" />
                   </div>
                   <div class="komoditasTitle position-relative">
                     <div class="position-absolute bottom-0 pb-4">
@@ -245,7 +243,7 @@
               <div class="komoditasTitle position-relative">
                 <div class="position-absolute bottom-0 pb-4">
                   <div class="komoditasTranslate mb-3">
-                    <h5 class="mb-3">Nila</h5>
+                    <h5 class="mb-3">Lobster</h5>
                     <p class="">
                       Indonesia sebagai negara kepulauan dengan perairan yang
                       kaya akan sumber daya alam, memiliki potensi ekspor
@@ -256,7 +254,7 @@
                     </div>
                   </div>
                 </div>
-                <img src="assets/komoditas4.png" alt="" />
+                <img src="assets/lobster.png" alt="" />
               </div>
               <div class="komoditasTitle position-relative">
                 <div class="position-absolute bottom-0 pb-4">
