add komoditas carousel on mobile and web

--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,7 @@
                   <div class="komoditasTitle position-relative">
                     <div class="position-absolute bottom-0 pb-4">
                       <div class="komoditasTranslate mb-3">
-                        <h5 class="mb-3">Udang</h5>
+                        <h5 class="mb-3">Tilapia</h5>
                         <p class="">
                           Indonesia berhasil memasok lebih dari 16% total
                           produksi dunia dengan rata-rata produksi tuna,
@@ -204,7 +204,24 @@
                         </div>
                       </div>
                     </div>
-                    <img src="assets/komoditas5.png" alt="" />
+                    <img src="assets/tilapia.png" alt="" />
+                  </div>
+                  <div class="komoditasTitle position-relative">
+                    <div class="position-absolute bottom-0 pb-4">
+                      <div class="komoditasTranslate mb-3">
+                        <h5 class="mb-3">Rumput Laut</h5>
+                        <p class="">
+                          Indonesia adalah negara terbesar kelima di dunia yang
+                          mengekspor produk Kepiting pasar global.
+                        </p>
+                        <div class="text-end">
+                          <a href="#" class="btn btn-primary btn-sm"
+                            >See more</a
+                          >
+                        </div>
+                      </div>
+                    </div>
+                    <img src="assets/RumputLaut.png" alt="" />
                   </div>
                   <div class="komoditasTitle position-relative">
                     <div class="position-absolute bottom-0 pb-4">
@@ -221,7 +238,7 @@
                         </div>
                       </div>
                     </div>
-                    <img src="assets/komoditas7.png" alt="" />
+                    <img src="assets/kepiting.png" alt="" />
                   </div>
                 </div>
               </div>
@@ -291,7 +308,7 @@
               <div class="komoditasTitle position-relative">
                 <div class="position-absolute bottom-0 pb-4">
                   <div class="komoditasTranslate mb-3">
-                    <h5 class="mb-3">Udang</h5>
+                    <h5 class="mb-3">Tilapia</h5>
                     <p class="">
                       Indonesia berhasil memasok lebih dari 16% total produksi
                       dunia dengan rata-rata produksi tuna, cakalang dan tongkol
@@ -302,7 +319,22 @@
                     </div>
                   </div>
                 </div>
-                <img src="assets/komoditas5.png" alt="" />
+                <img src="assets/tilapia.png" alt="" />
+              </div>
+              <div class="komoditasTitle position-relative">
+                <div class="position-absolute bottom-0 pb-4">
+                  <div class="komoditasTranslate mb-3">
+                    <h5 class="mb-3">Rumput Laut</h5>
+                    <p class="">
+                      Indonesia adalah negara terbesar kelima di dunia yang
+                      mengekspor produk Kepiting pasar global.
+                    </p>
+                    <div class="text-end">
+                      <a href="#" class="btn btn-primary btn-sm">See more</a>
+                    </div>
+                  </div>
+                </div>
+                <img src="assets/RumputLaut.png" alt="" />
               </div>
               <div class="komoditasTitle position-relative">
                 <div class="position-absolute bottom-0 pb-4">
@@ -317,7 +349,7 @@
                     </div>
                   </div>
                 </div>
-                <img src="assets/komoditas7.png" alt="" />
+                <img src="assets/kepiting.png" alt="" />
               </div>
             </div>
           </div>
